next-exchange/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: next-exchange
  name: next-exchange
