next-exchange/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-exchange
  namespace: next-exchange
spec:
  selector:
    app: next-exchange
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 80
